# DensityCalculator

.github/workflows/: wheels.yml
package/: CMakeLists.txt  README.md  get_sources  pyproject.toml
package/checkout/: patch_file.patch  resinfo_patch.txt
package/gemmi/: CMakeLists.txt
package/src/cpp/: difference-density.cpp
package/src/density_calculator/: gemmi_bindings.py
package/src/wasm/: density-calculator-wasm.cpp
webapp/: density_calculator.js  index.css  index.html
